# simple-archiver

./: .gitignore  CMakeLists.txt  README.md
include/: Archiver.hpp  CLI.hpp  FileInfo.hpp  util.hpp
src/: Archiver.cpp  CLI.cpp  FileInfo.cpp  main.cpp  util.cpp
